GNOME Bugzilla – Bug 730375
camel: Print a warning on failing to save migrated maildir version
Last modified: 2014-05-20 10:11:16 UTC
Patch attached.
Created attachment 276774 [details] [review] camel: Print a warning on failing to save migrated maildir version Rather than ignoring potential failure completely. Coverity issue: #1214488
Review of attachment 276774 [details] [review]: OK, looks fine. Please commit. Thanks.
Attachment 276774 [details] pushed as 5667b41 - camel: Print a warning on failing to save migrated maildir version