camel: Print a warning on failing to save migrated maildir version

Rather than ignoring potential failure completely.

Coverity issue: #1214488

https://bugzilla.gnome.org/show_bug.cgi?id=730375